
2020-11-30  James K. Lowden  <jklowden@symas.com>

	* testsuite.src/run_misc.at: correct for 32-bit in
	  "Test dump feature (2)"

2020-11-21  Simon Sobisch <simonsobisch@gnu.org>

	* valgrind.supp: suppression file for bash + bdb errors (commonly not
	  shipped with the OS)
	* atlocal_valgrind: default to suppress via valgrind.supp;
	  log name not build from parameter passed to the script any more;
	  updated usage-notes

2020-11-20  Simon Sobisch <simonsobisch@gnu.org>

	* general: pass AWK, GREP, SED to the testsuite
	* atlocal.in, atlocal_valgrind, atlocal_win:
	  remove temporary file info.out after use
	* listings-sed.sh: replace both 2 and 3-part version numbers

2020-10-26  Simon Sobisch <simonsobisch@gnu.org>

	* atlocal.in, atlocal_valgrind, atlocal_win:
	  now also unsets cobc related environment variables:
	  use $() instead of backticks in all places

2020-07-19  Edward Hart <edward.dan.hart@gmail.com>

	* atlocal.in, atlocal_valgrind, atlocal_win: replaced COB_HAS_CJSON with
	  COB_HAS_JSON

2020-05-06  Simon Sobisch <simonsobisch@gnu.org>

	* atlocal.in: allow COBC, COBCRUN, COBCRUN_DIRECT to override
	  for make localcheck (especially useful in case of installprefix)
	* Makefile.am: added some comments and an explicit warning for
	  installcheck target

2020-05-04  Simon Sobisch <simonsobisch@gnu.org>

	* atlocal.in: pass exec_prefix as it is likely referenced in the LIBS
	  entries used (thanks to Robert Dubner)
	* atlocal.in, atlocal_valgrind, atlocal_win: unified

2020-04-02  Simon Sobisch <simonsobisch@gnu.org>

	* run_prog_manual.sh.in, testsuite.src/run_manual_screen.at:
	  pass program to run to the script instead of hard-wire of "./prog"

2020-03-22  Simon Sobisch <simonsobisch@gnu.org>

	* atlocal_win: use intermediate info.out instead of calling
	  cobc --info multiple times

2020-03-01  Simon Sobisch <simonsobisch@gnu.org>

	* atlocal.in: COB_LIBS during test be based on built-in COB_LIBS, not
	  on built-in LIBCOB_LIBS
